--- a/head.html
+++ b/head.html
@@ -13,7 +13,10 @@
     }
   }
 </script>
-<script type="text/javascript" src="https://s7ap1.scene7.com/s7viewers/html5/js/VideoViewer.js"></script>
+<!-- script type="text/javascript" src="https://s7ap1.scene7.com/s7viewers/html5/js/VideoViewer.js"></script-->
+
+<script type="text/javascript" src="https://s7ap1.scene7.com/s7viewers/html5/js/SmartCropVideoViewer.js"></script>
+
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 
